test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/cast_to_array_type_3.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(arr)
  [
  const int(6)
  ]
  ;
  return
  (
  (
  long
  (
  (
  [
  const int(2)
  ]
  )
  [
  const int(3)
  ]
  )
  )
  identifier(arr)
  )
  ;
  }
